화면에 상품정보 표기해주기 User 에 urls 추가 - 로그인 페이지 구현할 예정

--- a/templates/etcpage/home.html
+++ b/templates/etcpage/home.html
@@ -47,9 +47,10 @@
     </nav>
     <!-- body !-->
     <h1>bestshop</h1>
-    <!-- 로그인 버튼 !-->
-    <!--- 카테고리 --!>
-    <!-- 인기상품 !-->
+
+    {% for product in products %}
+        <p><a href="#">{{ product.name }}</a></p>
+    {% endfor %}
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
