--- a/templates/etcpage/home.html
+++ b/templates/etcpage/home.html
@@ -40,7 +40,7 @@
             {% endfor %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Login</a></li>
+            <li><a href="/user/login">Login</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
