--- a/templates/product/detail.html
+++ b/templates/product/detail.html
@@ -1,10 +1,17 @@
 {% extends 'layout.html' %}
 {% load humanize %}
 {% block container %}
-    <h1>{{  product.name }}</h1>
+    <h1>{{ product.name }}</h1>
+    <p>{{ product.created_at|naturaltime }}</p>
     <p>가격 : {{ product.price|intcomma }}</p>
     <p>재고 : {{ product.inventory_count }}</p>
     <p>평점 : {{ product.score }} / 5.0</p>
+    <form method="POST" action="{% url 'user_mypage_cart' %}">
+        {% csrf_token %}
+        <input type="hidden" name="product_id" value="{{ product.id }}">
+        <input type="number" name="count" value="1">
+        <button type="submit">장바구니 담기</button>
+    </form>
 
     {{ product.description }}
 {% endblock %}
